--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>buat aufal</title>
+  <title>Buat aufal</title>
   <script src="script.js"defer></script>
   <link rel="stylesheet"defer type="text/css" href="style.css">
 </head>
 <body>
-  <h1>buat aufal nich</h1>
+  <h1>Buat aufal nich</h1>
   <button id="button">klik siniii ganteng</button>
 
   <div id="alert" style="display: none;">
