--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Buat aufal</title>
-  <script src="script.js"defer></script>
-  <link rel="stylesheet"defer type="text/css" href="style.css">
+  <script src="script.js" defer></script>
+  <link rel="stylesheet" defer type="text/css" href="style.css">
   <meta name="author" content="Eva aldori kanigoro">
 </head>
+
 <body>
   <h1>Buat aufal nich</h1>
   <p id="message"></p>
   <div id="button_container">
     <button id="button">klik siniii ganteng</button>
   </div>
+  <audio id="myAudio" src="/sound/videoplayback.m4a"></audio>
 </body>
+
 </html>
