--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Buat aufal</title>
   <script src="script.js" defer></script>
+  <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/91175425?v=4" />
   <link rel="stylesheet" defer type="text/css" href="style.css">
   <meta name="author" content="Eva aldori kanigoro">
 </head>
